; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_add_pending_object_with_mode.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_add_pending_object_with_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i32 }
%struct.object = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rev_info*, %struct.object*, i8*, i32)* @add_pending_object_with_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_pending_object_with_mode(%struct.rev_info* %0, %struct.object* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.rev_info*, align 8
  %6 = alloca %struct.object*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.rev_info* %0, %struct.rev_info** %5, align 8
  store %struct.object* %1, %struct.object** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.rev_info*, %struct.rev_info** %5, align 8
  %10 = load %struct.object*, %struct.object** %6, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @add_pending_object_with_path(%struct.rev_info* %9, %struct.object* %10, i8* %11, i32 %12, i32* null)
  ret void
}

declare dso_local i32 @add_pending_object_with_path(%struct.rev_info*, %struct.object*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
